--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 output_vgg_features.txt filter=lfs diff=lfs merge=lfs -text
 output_labels.txt filter=lfs diff=lfs merge=lfs -text
+output_labels_v2.txt filter=lfs diff=lfs merge=lfs -text
+output_vgg_features_v2.txt filter=lfs diff=lfs merge=lfs -text
